--- a/ProyectoCine/nbproject/project.properties
+++ b/ProyectoCine/nbproject/project.properties
@@ -27,13 +27,17 @@ dist.dir=dist
 dist.jar=${dist.dir}/ProyectoCine.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.derby.jar=C:\\Program Files\\Java\\jdk1.8.0_144\\db\\lib\\derby.jar
+file.reference.derbyclient.jar=C:\\Program Files\\Java\\jdk1.8.0_144\\db\\lib\\derbyclient.jar
 file.reference.mysql-connector-java-5.1.23-bin.jar=C:\\Program Files\\NetBeans 8.2\\ide\\modules\\ext\\mysql-connector-java-5.1.23-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.hibernate4-support.classpath}:\
     ${libs.jpa2-persistence.classpath}:\
-    ${file.reference.mysql-connector-java-5.1.23-bin.jar}
+    ${file.reference.mysql-connector-java-5.1.23-bin.jar}:\
+    ${file.reference.derbyclient.jar}:\
+    ${file.reference.derby.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
